# lance

./: .bumpversion.toml  AGENTS.md  CLAUDE.md  Cargo.toml  LIST_STRUCT_ISSUE_SUMMARY.md  fix_create_index.py  run_test.sh  sitemap.xml  test_issue_3578.py  test_list_struct_minimal.py  test_list_struct_null_levels.py  test_list_struct_repro.py  test_null_struct_by_version.py  test_null_struct_element.py  test_repdef_builder_order.py  test_repdef_null_first.py  test_repdef_panic.py  test_verify_null_loss.py
.claude/commands/: lint.md  review.md  update_version.md
.github/: labeler-area.yml
.github/scripts/: migrate-area-labels.sh
.github/workflows/: ci-benchmarks.yml  ci-scripts.yml  claude-code-review.yml  docs-check.yml  format-vote-gate.yml  format-vote-reminder.yml  pypi-publish.yml  python.yml  rust.yml
ci/: check_versions.py  format_vote_gate.js  format_vote_gate.py  format_vote_gate.test.js  sync_pmc_docs.py  test_format_vote_gate.py
docs/: mkdocs.yml
docs/hooks/: pmc_roster.py
guide/object_store/: index.html
java/: pom.xml
java/lance-jni/: Cargo.toml
memtest/: Cargo.toml  Makefile  README.md  pyproject.toml
memtest/python/memtest/: __init__.py  __main__.py  pytest_plugin.py
memtest/python/tests/: test_basic.py  test_benchmark_plugin.py  test_integration.py
memtest/src/: allocator.rs  lib.rs  stats.rs
protos/: file.proto  index.proto  table.proto  table_identifier.proto  transaction.proto
python/: Cargo.toml  pyproject.toml
python/examples/: debug_btree_cache.py  (+1 more)
rust/: test_error_suggestions.rs
search/: search_index.json
(+365 files in other folders)
