[workspace]

[package]
name = "lance-memtest"
version = "0.1.0"
edition = "2021"
authors = ["Lance Developers"]
description = "Memory allocation testing utilities for Python"
license = "Apache-2.0"

[lib]
name = "memtest"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
